--- a/src/components/ContactForm.scss
+++ b/src/components/ContactForm.scss
@@ -29,6 +29,8 @@
 }
 
 .form-content-left {
+  display: flex;
+
   background: linear-gradient(
     90deg,
     rgba(39, 176, 255, 0.5) 0%,
